--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kt402",
+  "name": "kt",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "firebase": "^9.9.3",
     "lodash": "^4.17.21",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
@@ -16,11 +17,13 @@
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.1.5",
+    "vuefire": "^2.2.5",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@types/lodash": "^4.14.184",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -30,6 +33,10 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^7.0.1",
+    "sass": "^1.54.5",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
     "typescript": "~4.5.5"
   },
   "eslintConfig": {
@@ -48,7 +55,8 @@
     "rules": {
       "vue/multi-word-component-names": "off",
       "vue/valid-v-slot": "off",
-      "@typescript-eslint/no-this-alias": "off"
+      "@typescript-eslint/no-this-alias": "off",
+      "no-unused-vars": "off"
     }
   },
   "browserslist": [
