--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "primevue": "^3.16.2",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "^4.1.5",
     "vuefire": "^2.2.5",
     "vuex": "^4.0.2"
